<resources>
    <string name="app_name">RockAround</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_reviews_too_see_here">No Reviews</string>
    <string name="per_hour">per hour</string>
    <string name="logout">Logout</string>
    <string name="artist_already_reviewed">Artist already reviewed</string>
    <string name="write_review">Write Review</string>
    <string name="more_reviews">More reviews</string>
    <string name="communication_rating">Communication Rating</string>
    <string name="reviews">Reviews</string>
    <string name="how_was_your_experience_with_this_venue">How was your experience with this venue?</string>
    <string name="title">Title</string>
    <string name="setting_rating">Setting Rating</string>
    <string name="atmosphere_rating">Atmosphere Rating</string>
    <string name="submit">Submit</string>
    <string name="reliability_rating">Reliability Rating</string>
    <string name="venue_already_reviewed">Venue already reviewed</string>
    <string name="discover">Discover</string>
    <string name="map">Map</string>
    <string name="account">Account</string>
    <string name="contact">Contact</string>
    <string name="ratings">Ratings</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="stage_presence_rating">Stage Presence Rating</string>
    <string name="vocals_rating">Vocals Rating</string>
    <string name="bio">Bio</string>
    <string name="town_city">Town/City</string>
    <string name="price">Price</string>
    <string name="contact_number">Contact Number</string>
    <string name="save">Save</string>
    <string name="no_of_members">No. of members</string>
    <string name="add_genre">Add Genre</string>
    <string name="tell_us_about_the_group">Tell us about the group</string>
    <string name="group_name">Group name</string>
    <string name="choose_image">Choose Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="venue_name">Venue Name</string>
    <string name="address_line_one">Address Line one</string>
    <string name="county">County</string>
    <string name="country">Country</string>
    <string name="max_capacity">Max Capacity</string>
    <string name="login">Login</string>
    <string name="rockaround">RockAround</string>

    <string-array name="genres">
        <item>Jazz</item>
        <item>Classical</item>
        <item>Pop</item>
        <item>RnB</item>
        <item>Rap</item>
        <item>Indie</item>
        <item>Rock</item>
        <item>Metal</item>
        <item>Disco</item>
        <item>Techno</item>
        <item>Country</item>
        <item>Hip-Hop</item>
        <item>Blues</item>
        <item>Soul</item>
    </string-array>

    <string-array name="venue_filters">
        <item>Descending</item>
        <item>Ascending</item>
        <item>Rating (High-low)</item>
        <item>Rating (Low-high)</item>
        <item>Price (High-Low)</item>
        <item>Price (Low-High)</item>
    </string-array>

    <string-array name="artist_filters">
    <item>Descending</item>
    <item>Ascending</item>
    <item>Rating (High-low)</item>
    <item>Rating (Low-high)</item>
    </string-array>

</resources>