<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.rockaroundapp.viewmodel.ArtistReviewsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".view.ReviewOfArtistFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/review_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/title"
            android:textSize="20dp"
            android:text="@={viewModel.reviewTitle}"
            app:layout_constraintBottom_toTopOf="@+id/review_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/review_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bio_box_outline"
            android:gravity="start|top"
            android:text="@={viewModel.reviewDescription}"
            android:hint="How was your experience with this artist?"
            android:inputType="textAutoCorrect|textMultiLine|textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review_title"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/cardview_dark_background"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review_description" />

        <TextView
            android:id="@+id/stage_presence_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stage_presence_rating"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"/>

        <RatingBar
            android:id="@+id/presence_review_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/stage_presence_rating_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:theme="@style/reviewRatings"
            android:stepSize=".5"
            android:numStars="5" />

        <TextView
            android:id="@+id/vocals_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vocals_rating"
            app:layout_constraintTop_toBottomOf="@id/presence_review_stars"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <RatingBar
            android:id="@+id/vocals_review_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/vocals_rating_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:theme="@style/reviewRatings"
            android:layout_marginStart="18dp"
            android:stepSize=".5"
            android:numStars="5" />

        <TextView
            android:id="@+id/reliability_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reliability_rating"
            app:layout_constraintTop_toBottomOf="@id/vocals_review_stars"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <RatingBar
            android:id="@+id/reliability_rating_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/reviewRatings"
            app:layout_constraintTop_toBottomOf="@id/reliability_rating_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:stepSize=".5"
            android:numStars="5" />

        <TextView
            android:id="@+id/communication_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/communication_rating"
            app:layout_constraintTop_toBottomOf="@id/reliability_rating_stars"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <RatingBar
            android:id="@+id/communication_rating_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/communication_rating_text"
            app:layout_constraintStart_toStartOf="@id/communication_rating_text"
            android:theme="@style/reviewRatings"
            android:stepSize=".5"
            android:numStars="5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/pill_button"
            android:text="@string/submit"
            android:onClick="@{() -> viewModel.onSubmitClick()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/communication_rating_stars"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>